# Continuum

./: .env.example  .gitignore  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: AGENTS.md  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_capture.py  0003_mentor.py
apps/api/src/continuum_api/: __init__.py  db.py  main.py  settings.py
apps/api/src/continuum_api/agent/: azure_openai.py  chat_model.py  factory.py  fake_chat.py  mentor.py  prompts.py  types.py
apps/api/src/continuum_api/knowledge/: azure_blob.py  factory.py  fake.py  foundry.py  interface.py  local_blob.py  types.py
apps/api/src/continuum_api/models/: __init__.py  app_info.py  conversation.py  document.py  ingestion_job.py  knowledge_source.py  message.py  role.py  successor.py
apps/api/src/continuum_api/repos/: capture.py  conversation.py
apps/api/src/continuum_api/routes/: capture.py  chat.py  internal.py
apps/api/src/continuum_api/services/: conversation.py  ingestion.py
apps/api/tests/: conftest.py  test_azure_blob_integration.py  test_azure_openai_integration.py  test_capture_api.py  test_capture_repos.py  test_chat_api.py  test_chat_factory.py  test_conversation_service.py  test_factory.py  test_fake_chat.py  test_fake_knowledge.py  test_foundry_integration.py  test_health.py  test_ingestion_service.py  test_internal_hello.py  test_local_blob.py  test_mentor_agent.py  test_models_capture.py  test_models_mentor.py  test_prompts.py
infra/: azure.yaml  main.bicep
(+37 files in other folders)
