[project]
name = "continuum-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "S-kippie", email = "issacysofia@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "azure-identity>=1.19",
]

[project.scripts]
continuum-api = "continuum_api.main:serve"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
